# transcript

./: .gitignore  README.md  pyproject.toml
data/: fastai2022.txt
nbs/: 01_read_data.ipynb  02_whisper.ipynb  03_results.ipynb  04_compare.ipynb
transcript/: __init__.py  __main__.py  cli.py  download.py  transcribe.py
transcript/cli/: __init__.py  download.py  fetch_models.py  models.py  transcribe.py
